Added some examples

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <h2><span>Pick a Landmark</span></h2>
         <div class="places-list">
           <ul>
-            <li><a href="#"><div></div>Space Needle</a></li>
-            <li><a href="#"><div></div>Eifel Tower</a></li>
-            <li><a href="#"><div></div>Stonehenge</a></li>
-            <li><a href="#"><div></div>Leaning Tower</a></li>
+            <li><a href="#"><img src="../img/example-stonehenge.png">Stonehenge</a></li>
+            <li><a href="#"><img src="../img/example-spaceneedle.png">Space Needle</a></li>
+            <li><a href="#"><img>Eifel Tower</a></li>
+            <li><a href="#"><img>Leaning Tower</a></li>
           </ul>
           <ul>
-            <li><a href="#"><div></div>Leaning Tower</a></li>
-            <li><a href="#"><div></div>Leaning Tower</a></li>
-            <li><a href="#"><div></div>Leaning Tower</a></li>
-            <li><a href="#"><div></div>Leaning Tower</a></li>
+            <li><a href="#"><img>Leaning Tower</a></li>
+            <li><a href="#"><img>Leaning Tower</a></li>
+            <li><a href="#"><img>Leaning Tower</a></li>
+            <li><a href="#"><img>Leaning Tower</a></li>
           </ul>
         </div>
       </div>
