--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2><span>Pick a Landmark</span></h2>
         <div class="places-list">
           <ul>
-            <li><a href="#"><img src="../img/example-stonehenge.png">Stonehenge</a></li>
-            <li><a href="#"><img src="../img/example-spaceneedle.png">Space Needle</a></li>
+            <li><a href="#"><img src="img/example-stonehenge.png">Stonehenge</a></li>
+            <li><a href="#"><img src="img/example-spaceneedle.png">Space Needle</a></li>
             <li><a href="#"><img>Eifel Tower</a></li>
             <li><a href="#"><img>Leaning Tower</a></li>
           </ul>
